# libptp2

./: CMakeLists.txt  README.md
src/: libptp-endian.h  myusb.c  properties.c  ptp-pack.c  ptp.c  ptp.h  ptpcam.c  ptpcam.h
